fix : (correcting coding style) removing binary using makefile too, it has wrong path

--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -5,6 +5,8 @@
 ## Makefile
 ##
 
+PATH_TO_ROOT	=	../..
+
 SRC	=	src/main.c								\
 		src/error_handler.c						\
 		src/client.c							\
@@ -31,7 +33,7 @@ all:	$(NAME)
 
 $(NAME):	$(OBJ)
 	$(CC) -o $(NAME) $(OBJ) $(CPPFLAGS)
-	mv $(NAME) ../..
+	mv $(NAME) $(PATH_TO_ROOT)
 
 clean:
 	$(RM) $(OBJ)
@@ -39,7 +41,7 @@ clean:
 	$(RM) *.gcda
 
 fclean:	clean
-	$(RM) $(NAME)
+	$(RM) $(PATH_TO_ROOT)/$(NAME)
 
 re:	fclean all
 
