feat : opening shared lib with dlopen and then used them dynamicly with dlsym in function pointer

--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -29,10 +29,12 @@ OBJ	=	$(SRC:.c=.o)
 
 CPPFLAGS	=	-I../../include
 
+LDFLAGS		=	-ldl
+
 all:	$(NAME)
 
 $(NAME):	$(OBJ)
-	$(CC) -o $(NAME) $(OBJ) $(CPPFLAGS)
+	$(CC) -o $(NAME) $(OBJ) $(CPPFLAGS) $(LDFLAGS)
 	mv $(NAME) $(PATH_TO_ROOT)
 
 clean:
