--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -7,12 +7,12 @@
 
 PATH_TO_ROOT	=	../..
 
-SRC	=	src/main.c							\
-		src/error_handler.c					\
-		src/server.c							\
-		src/init.c							\
-		src/client_management.c				\
-		src/utils.c							\
+SRC	=	src/main.c					\
+		src/error_handler.c			\
+		src/server.c				\
+		src/init.c					\
+		src/client_management.c		\
+		src/utils.c					\
 
 NAME	=	myteams_server
 
@@ -20,7 +20,7 @@ OBJ	=	$(SRC:.c=.o)
 
 CPPFLAGS	=	-I../../include
 
-LDFLAGS		=	-ldl
+LDFLAGS		=	-L../../libs/myteams -lmyteams
 
 all:	$(NAME)
 
