--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -21,7 +21,9 @@ SRC	=	src/main.c								\
 		src/commands/use_cmd.c					\
 		src/commands/create_cmd.c				\
 		src/commands/list_cmd.c					\
-		src/commands/info_cmd.c
+		src/commands/info_cmd.c					\
+		src/receiver/login.c					\
+		src/receiver/read_server.c
 
 NAME	=	myteams_cli
 
