feat : done logout user in server and client

--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -23,7 +23,8 @@ SRC	=	src/main.c								\
 		src/commands/list_cmd.c					\
 		src/commands/info_cmd.c					\
 		src/receiver/login.c					\
-		src/receiver/read_server.c
+		src/receiver/read_server.c				\
+		src/receiver/logout.c
 
 NAME	=	myteams_cli
 
