--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -17,6 +17,7 @@ SRC	=	src/main.c								\
 		src/receiver/logout.c					\
 		src/receiver/send.c						\
 		src/receiver/user.c						\
+		src/receiver/teams.c					\
 
 NAME	=	myteams_server
 
