--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -29,6 +29,7 @@ SRC	=	src/main.c								\
 		src/receiver/send.c						\
 		src/receiver/user.c						\
 		src/receiver/teams_create.c				\
+		src/buffer_management.c					\
 
 NAME	=	myteams_cli
 
