--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -18,6 +18,7 @@ SRC	=	src/main.c								\
 		src/receiver/send.c						\
 		src/receiver/user.c						\
 		src/receiver/teams.c					\
+		src/receiver/list.c						\
 
 NAME	=	myteams_server
 
