43 : feat : started info cmds but only done for /use default

--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -35,6 +35,7 @@ SRC	=	src/main.c								\
 		src/receiver/use.c						\
 		src/buffer_management.c					\
 		src/receiver/messages.c					\
+		src/receiver/info.c						\
 
 NAME	=	myteams_cli
 
