22 : feat : saving users and user's messages into a backup file

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -22,8 +22,10 @@ SRC	=	src/main.c								\
 		src/receiver/subscribe.c				\
 		src/receiver/unsubscribe.c				\
 		src/receiver/use.c						\
-		src/receiver/messages.c
+		src/receiver/messages.c					\
 		src/save_backup.c						\
+		src/load/load_users.c					\
+		src/save/save_users.c					\
 
 NAME	=	myteams_server
 
