67 : feat : done listing of others data

--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -39,7 +39,8 @@ SRC	=	src/main.c								\
 		src/receiver/info.c						\
 		src/receiver/subscribed.c				\
 		src/receiver/create.c					\
-		src/commands/info_cmd_send.c
+		src/commands/info_cmd_send.c			\
+		src/commands/list_cmd_send.c
 
 NAME	=	myteams_cli
 
